--- a/test/swansea/index.html
+++ b/test/swansea/index.html
@@ -40,7 +40,7 @@
                                             <a class="nav-link dropdown-toggle" href="./services.html">Servicios</a>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="./projects.html">Proyectos</a>
+                                            <a class="nav-link dropdown-toggle" href="./links.html">Info de interés</a>
                                         </li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="./contact.html">Contacto</a>
