se arreglan cambios al link de interes

--- a/test/swansea/indexEn.html
+++ b/test/swansea/indexEn.html
@@ -40,7 +40,7 @@
                                             <a class="nav-link dropdown-toggle" href="./servicesEn.html">Services</a>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="./projectsEn.html">Projects</a>
+                                            <a class="nav-link " href="./linksEN.html">Info de interés</a>
                                         </li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="./contactEn.html">Contact</a>
