--- a/test/swansea/services.html
+++ b/test/swansea/services.html
@@ -38,7 +38,7 @@
                                         <a class="nav-link " href="./services.html">Servicios</a>
                                     </li>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link " href="./projects.html">Proyectos</a>
+                                        <a class="nav-link " href="./links.html">Info de interés</a>
                                     </li>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link " href="./contact.html">Contacto</a>
