cambios en mapa

--- a/test/swansea/links.html
+++ b/test/swansea/links.html
@@ -184,24 +184,32 @@
 
                     <!--/column -->
                 </div>
+                <br>
+
 
 
                 <section class="wrapper image-wrapper bg-auto no-overlay bg-image text-center py-14 py-md-16 bg-map" data-image-src="./assets/img/routemap.jpg">
+                    <div class="row text-center">
+                        <div class="col-xl-10 mx-auto">
+                            <h3 class="display-4 mb-10 px-xxl-15">YML Route Map.</h3>
+                        </div>
+                        <!-- /column -->
+                    </div>
                     <div class="container py-0 py-md-18">
                         <div class="row">
                             <div class="col-lg-6 col-xl-5 mx-auto">
-                                <h2 class="display-4 mb-3 text-center">YML Route Map</h2>
-                                <p class="lead mb-5 px-md-16 px-lg-3">Port Rotation <br> SHANGHAI - NINGBO - YANTIAN - HONGKONG - SINGAPORE - RIO DE JANEIRO - SANTOS - PARANAGUA - NAVEGANTES - MONTEVIDEO - BUENOS AIRES - RIO GRANDE - NAVEGANTES - PARANAGUA - SANTOS - SINGAPORE - HONGKONG
-                                    – SHANGHAI.</p>
 
                             </div>
                             <!-- /column -->
                         </div>
+
                         <!-- /.row -->
                     </div>
                     <!-- /.container -->
                 </section>
                 <!-- /section -->
+                <p class="lead mb-5 px-md-16 px-lg-3" align="center">Port Rotation </p>
+                <p class="lead mb-5 px-md-16 px-lg-3">SHANGHAI - NINGBO - YANTIAN - HONGKONG - SINGAPORE - RIO DE JANEIRO - SANTOS - PARANAGUA - NAVEGANTES - MONTEVIDEO - BUENOS AIRES - RIO GRANDE - NAVEGANTES - PARANAGUA - SANTOS - SINGAPORE - HONGKONG – SHANGHAI.</p>
 
                 <section class="wrapper image-wrapper bg-auto no-overlay bg-image text-center py-14 py-md-16 bg-map" data-image-src="./assets/img/wbound.png">
                     <div class="container py-0 py-md-18">
