Se agregan cambios pedidos por Belu en primer mail de comentarios

--- a/test/swansea/about.html
+++ b/test/swansea/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="An impressive and flawless site template that includes various UI elements and countless features, attractive ready-made blocks and rich pages, basically everything you need to create a unique and professional website.">
     <meta name="keywords" content="bootstrap 5, business, corporate, creative, gulp, marketing, minimal, modern, multipurpose, one page, responsive, saas, sass, seo, startup, html5 template, site template">
     <meta name="author" content="elemis">
-    <title>Swansea Shipping Agency</title>
+    <title>Swansea Agencia Marítima</title>
     <link rel="shortcut icon" href="./assets/img/favicon.png">
     <link rel="stylesheet" href="./assets/css/plugins.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -100,7 +100,7 @@
         <section class="wrapper bg-gray">
 
             <!-- /.container -->
-            <figure class="position-absoute" style="bottom: 0; left: 0; z-index: 2;"><img src="./assets/img/photos/about1.png" alt="" /></figure>
+            <figure class="position-absoute" style="bottom: 0; left: 0; z-index: 2;"><img src="./assets/img/photos/about4.png" alt="" /></figure>
         </section>
         <!-- /section -->
         <section class="wrapper bg-light angled upper-end lower-end">
@@ -111,19 +111,19 @@
                         <div class="overlap-grid overlap-grid-2">
 
                             <div class="item" href="https://www.repremar.com">
-                                <figure class="rounded shadow"><img src="./assets/img/photos/regsa1.png" srcset="./assets/img/photos/regsa1.png 2x" alt=""></figure>
+                                <figure class="rounded shadow"><img src="./assets/img/photos/regsa2.png" srcset="./assets/img/photos/regsa2.png 2x" alt=""></figure>
                             </div>
                         </div>
                     </div>
                     <!--/column -->
                     <div class="col-lg-6">
                         <img src="./assets/img/icons/lineal/megaphone.svg" class="svg-inject icon-svg icon-svg-md mb-4" alt="" />
-                        <h2 class="display-4 mb-3">Quienes somos?</h2>
-                        <p class="lead fs-lg">SWANSEA es el representante de YANG MING LINES en Paraguay, somos una agencia maritima de de primera línea que ofrece servicios de agenciamiento marítimo y operaciones portuarias . Nuestra empresa madre, REPREMAR Shipping es una
-                            reconocida agencia marítima que ofrece servicios de back-office para cruceros, portacontenedores, petroleros, graneleros y buques de enlace que operan en cualquier puerto de la región.</p>
-                        <p class="mb-6">Repremar fue fundada en 1946, pertenecía antiguamente al Vestey Group (Inglaterra). En 1982 fue adquirida por la familia Pena. Con los nuevos propietarios la empresa fue reorganizada logrando una gran expansión en sus actividades
-                            y en el alcance de sus servicios. Algunas de las compañías navieras más importantes del mundo, como COSCO, CHINA SHIPPING y CSAV han confiado en REPREMAR Shipping como su socio regional, estableciendo joint-ventures en Uruguay
-                            y Argentina, en 1993, 2005 y 2008 respectivamente.</p>
+                        <h2 class="display-4 mb-3">¿QUIÉNES SOMOS?</h2>
+                        <p class="lead fs-lg">SWANSEA es el representante de YANG MING LINE en Paraguay, somos una agencia marítima de de primera línea que ofrece servicios de agenciamiento marítimo y operaciones portuarias . Nuestra empresa madre, REPREMAR Shipping es una
+                            reconocida agencia marítima uruguaya que ofrece servicios de back-office para cruceros, portacontenedores, petroleros, graneleros y buques de enlace que operan en cualquier puerto de la región.</p>
+                        <p class="mb-6">Repremar fue fundada en 1946 en Uruguay, pertenecía antiguamente al Vestey Group (Inglaterra). En 1982 fue adquirida por la familia Pena. Con los nuevos propietarios la empresa fue reorganizada logrando una gran expansión en sus
+                            actividades y en el alcance de sus servicios. Algunas de las compañías navieras más importantes del mundo, como COSCO, CHINA SHIPPING y CSAV han confiado en REPREMAR Shipping como su socio regional, estableciendo joint-ventures
+                            en Uruguay y Argentina, en 1993, 2005 y 2008 respectivamente.</p>
 
                         <!--/.row -->
                     </div>
@@ -144,7 +144,7 @@
                             <div class="card-body p-6">
                                 <div class="d-flex flex-row">
                                     <div>
-                                        <span class="icon btn btn-circle btn-lg btn-soft-primary disabled me-4"><span class="number">01</span></span>
+                                        <span class="icon btn btn-circle btn-lg btn-soft-primary disabled me-4"><span class="number">M</span></span>
                                     </div>
                                     <div>
                                         <h4 class="mb-1">Misión</h4>
@@ -160,10 +160,10 @@
                             <div class="card-body p-6">
                                 <div class="d-flex flex-row">
                                     <div>
-                                        <span class="icon btn btn-circle btn-lg btn-soft-primary disabled me-4"><span class="number">02</span></span>
+                                        <span class="icon btn btn-circle btn-lg btn-soft-primary disabled me-4"><span class="number">V</span></span>
                                     </div>
                                     <div>
-                                        <h4 class="mb-1">Vision</h4>
+                                        <h4 class="mb-1">Visión</h4>
                                         <p class="mb-0">Ser una organiacion Líder y mantenernos como referente en el país en la provisión de servicios de agenciamiento marítimo</p>
                                     </div>
                                 </div>
@@ -175,7 +175,7 @@
                             <div class="card-body p-6">
                                 <div class="d-flex flex-row">
                                     <div>
-                                        <span class="icon btn btn-circle btn-lg btn-soft-primary disabled me-4"><span class="number">03</span></span>
+                                        <span class="icon btn btn-circle btn-lg btn-soft-primary disabled me-4"><span class="number">C</span></span>
                                     </div>
                                     <div>
                                         <h4 class="mb-1">Compromiso</h4>
@@ -189,7 +189,7 @@
                     </div>
                     <!--/column -->
                     <div class="col-lg-6">
-                        <h2 class="display-6 mb-3">Nuestra politica</h2>
+                        <h2 class="display-6 mb-3">Nuestra política</h2>
                         <p class="lead fs-lg pe-lg-5">Find out everything you need to know and more about how we create our business process models.</p>
                         <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis ornare.</p>
                         <p class="mb-6">Nullam id dolor id nibh ultricies vehicula ut id elit. Vestibulum id ligula porta felis euismod semper. Aenean lacinia bibendum nulla sed consectetur. Sed posuere consectetur est at lobortis. Vestibulum id ligula porta felis.</p>
@@ -226,7 +226,7 @@
                                             <div class="card-body">
                                                 <img class="rounded-circle w-15 mb-4" src="./assets/img/avatars/daguero.jpg" srcset="./assets/img/avatars/te1@2x.jpg 2x" alt="" />
                                                 <h4 class="mb-1">Daniel Aguero</h4>
-                                                <div class="meta mb-2">General Manager</div>
+                                                <div class="meta mb-2">Gerente General</div>
                                                 <nav class="nav social mb-0">
                                                     <a href="#"><i class="uil uil-linkedin"></i></a>
                                                     <a href="mailto:daguero@swansea.com.py"><i class="uil uil-fast-mail"></i></a>
@@ -246,7 +246,7 @@
                                             <div class="card-body">
                                                 <img class="rounded-circle w-15 mb-4" src="./assets/img/avatars/cmartinez.jpg" srcset="./assets/img/avatars/te2@2x.jpg 2x" alt="" />
                                                 <h4 class="mb-1">Cinthia Martínez</h4>
-                                                <div class="meta mb-2">Administracion</div>
+                                                <div class="meta mb-2">Administración</div>
                                                 <nav class="nav social mb-0">
                                                     <a href="#"><i class="uil uil-linkedin"></i></a>
                                                     <a href="mailto:cmartinez@swansea.com.py"><i class="uil uil-fast-mail"></i></a>
@@ -266,7 +266,7 @@
                                             <div class="card-body">
                                                 <img class="rounded-circle w-15 mb-4" src="./assets/img/avatars/ltorres.jpg" srcset="./assets/img/avatars/te3@2x.jpg 2x" alt="" />
                                                 <h4 class="mb-1">Liz Torres</h4>
-                                                <div class="meta mb-2">Opraciones</div>
+                                                <div class="meta mb-2">Operaciones</div>
                                                 <nav class="nav social mb-0">
                                                     <a href="#"><i class="uil uil-linkedin"></i></a>
                                                     <a href="mailto:ltorres@swansea.com.py"><i class="uil uil-fast-mail"></i></a>
@@ -398,7 +398,7 @@
                 <!-- /column -->
                 <div class="col-md-4 col-lg-3">
                     <div class="widget">
-                        <h4 class="widget-title text-white mb-3">Get in Touch</h4>
+                        <h4 class="widget-title text-white mb-3">Sigamos en contacto</h4>
                         <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asuncion, Paraguay</address>
                         <a href="mailto:info@swansea.com.py">info@swansea.com.py</a><br /> +595 21 328 9690
                     </div>
@@ -407,11 +407,11 @@
                 <!-- /column -->
                 <div class="col-md-4 col-lg-3">
                     <div class="widget">
-                        <h4 class="widget-title text-white mb-3">Learn More</h4>
+                        <h4 class="widget-title text-white mb-3">Saber más</h4>
                         <ul class="list-unstyled  mb-0">
-                            <li><a href="./about.html">About Us</a></li>
-                            <li><a href="./services.html">Services</a></li>
-                            <li><a href="./projects4.html">Projects</a></li>
+                            <li><a href="./about.html">Sobre nosotros</a></li>
+                            <li><a href="./services.html">Servicios</a></li>
+                            <li><a href="./links.html">Info de interés</a></li>
                         </ul>
                     </div>
                     <!-- /.widget -->
