--- a/test/swansea/contact.html
+++ b/test/swansea/contact.html
@@ -175,7 +175,7 @@
                 <!-- /.row -->
                 <div class="row">
                     <div class="col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
-                        <h2 class="display-4 mb-3 text-center">Escribenos desde el formulario</h2>
+                        <h2 class="display-4 mb-3 text-center">Escríbenos desde el formulario</h2>
                         <p class="lead text-center mb-10">Responderemos tu mensaje a la brevedad.</p>
                         <form class="contact-form needs-validation" method="post" action="./assets/php/contact.php" novalidate>
                             <div class="messages"></div>
@@ -250,7 +250,7 @@
             <div class="container pt-0 pb-14 pt-md-16 pb-md-18">
                 <div class="row">
                     <div class="col-lg-9 col-xxl-8 mx-auto">
-                        <h3 class="display-4 mb-8 px-xl-12">Mas de 50 clientes confian en nosotros. Trabejemos juntos!.</h3>
+                        <h3 class="display-4 mb-8 px-xl-12">Mas de 50 clientes confian en nosotros. ¡Trabajemos juntos!</h3>
                     </div>
                     <!-- /.row -->
                 </div>
@@ -303,20 +303,20 @@
                     <!-- /column -->
                     <div class="col-md-4 col-lg-3">
                         <div class="widget">
-                            <h4 class="widget-title text-white mb-3">Get in Touch</h4>
-                            <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asuncion, Paraguay</address>
-                            <a href="mailto:info@swansea.com.py">info@swansea.com.py</a><br /> +595 21 328 9690
+                            <h4 class="widget-title text-white mb-3">Sigamos en contacto/h4>
+                                <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asuncion, Paraguay</address>
+                                <a href="mailto:info@swansea.com.py">info@swansea.com.py</a><br /> +595 21 328 9690
                         </div>
                         <!-- /.widget -->
                     </div>
                     <!-- /column -->
                     <div class="col-md-4 col-lg-3">
                         <div class="widget">
-                            <h4 class="widget-title text-white mb-3">Learn More</h4>
+                            <h4 class="widget-title text-white mb-3">Saber más</h4>
                             <ul class="list-unstyled  mb-0">
-                                <li><a href="./about.html">About Us</a></li>
-                                <li><a href="./services.html">Services</a></li>
-                                <li><a href="./projects4.html">Projects</a></li>
+                                <li><a href="./about.html">Sobre nosotros</a></li>
+                                <li><a href="./services.html">Servicios</a></li>
+                                <li><a href="./links.html">Info de interés</a></li>
                             </ul>
                         </div>
                         <!-- /.widget -->
