--- a/test/swansea/services.html
+++ b/test/swansea/services.html
@@ -7,7 +7,7 @@
     <meta name="description" content="An impressive and flawless site template that includes various UI elements and countless features, attractive ready-made blocks and rich pages, basically everything you need to create a unique and professional website.">
     <meta name="keywords" content="bootstrap 5, business, corporate, creative, gulp, marketing, minimal, modern, multipurpose, one page, responsive, saas, sass, seo, startup, html5 template, site template">
     <meta name="author" content="elemis">
-    <title>Swansea Shipping Agency</title>
+    <title>Swansea Agencia Marítima</title>
     <link rel="shortcut icon" href="./assets/img/favicon.png">
     <link rel="stylesheet" href="./assets/css/plugins.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -91,7 +91,7 @@
                 <div class="row">
                     <div class="col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto mb-11">
                         <h1 class="display-1 mb-3">Nuestros Servicios</h1>
-                        <p class="lead px-lg-7 px-xl-7 px-xxl-6">Somos representantes de Yang Ming Lines <br> en Paraguay</p>
+                        <p class="lead px-lg-7 px-xl-7 px-xxl-6">Somos representantes de Yang Ming Line <br> en Paraguay</p>
                     </div>
                     <!-- /column -->
                 </div>
@@ -100,11 +100,12 @@
             <!-- /.container -->
         </section>
         <!-- /section -->
+
         <section class="wrapper bg-light angled upper-end">
             <div class="container pb-14 pb-md-16">
                 <div class="row mb-8">
                     <div class="col-12 mt-n20">
-                        <figure class="rounded"><img src="./assets/img/photos/about5.jpg" srcset="./assets/img/photos/about5@2x.jpg 2x" alt="" /></figure>
+                        <figure class="rounded"><img src="./assets/img/photos/serviciospic.png" srcset="./assets/img/photos/serviciospic.png 2x" alt="" /></figure>
                         <div class="row">
                             <div class="col-xl-10 mx-auto">
                                 <div class="card image-wrapper bg-full bg-image bg-overlay bg-overlay-400 text-white mt-n5 mt-lg-0 mt-lg-n50p mb-lg-n50p border-radius-lg-top" data-image-src="./assets/img/photos/bg3.jpg">
@@ -112,24 +113,24 @@
                                         <div class="row align-items-center counter-wrapper gy-4 text-center">
                                             <div class="col-6 col-lg-3">
                                                 <h3 class="counter counter-lg text-white">7518</h3>
-                                                <p>Completed Projects</p>
+                                                <p>Projectos completados</p>
                                             </div>
                                             <!--/column -->
                                             <div class="col-6 col-lg-3">
                                                 <h3 class="counter counter-lg text-white">3472</h3>
-                                                <p>Satisfied Customers</p>
+                                                <p>Clientes Satisfechos</p>
                                             </div>
                                             <!--/column -->
+
                                             <div class="col-6 col-lg-3">
-                                                <h3 class="counter counter-lg text-white">2184</h3>
-                                                <p>Expert Employees</p>
+                                                <h3 class="counter counter-lg text-white">2567</h3>
+                                                <p>Problemas Solucionados</p>
                                             </div>
-                                            <!--/column -->
+
                                             <div class="col-6 col-lg-3">
-                                                <h3 class="counter counter-lg text-white">4523</h3>
-                                                <p>Awards Won</p>
+                                                <h3 class="counter counter-lg text-white">502.367</h3>
+                                                <p>Tonelada de mercadería</p>
                                             </div>
-                                            <!--/column -->
                                         </div>
                                         <!--/.row -->
                                     </div>
@@ -148,19 +149,19 @@
                     <div class="col-lg-6 order-lg-2">
                         <div class="row gx-md-5 gy-5">
                             <div class="col-md-4 offset-md-2 align-self-end">
-                                <figure class="rounded"><img src="./assets/img/photos/g1.jpg" srcset="./assets/img/photos/g1@2x.jpg 2x" alt=""></figure>
+                                <figure class="rounded"><img src="./assets/img/photos/port3.jpg" srcset="./assets/img/photos/port3.jpg 2x" alt=""></figure>
                             </div>
                             <!--/column -->
                             <div class="col-md-6 align-self-end">
-                                <figure class="rounded"><img src="./assets/img/photos/g2.jpg" srcset="./assets/img/photos/g2@2x.jpg 2x" alt=""></figure>
+                                <figure class="rounded"><img src="./assets/img/photos/port2.jpg" srcset="./assets/img/photos/port2.jpg 2x" alt=""></figure>
                             </div>
                             <!--/column -->
                             <div class="col-md-6 offset-md-1">
-                                <figure class="rounded"><img src="./assets/img/photos/g3.jpg" srcset="./assets/img/photos/g3@2x.jpg 2x" alt=""></figure>
+                                <figure class="rounded"><img src="./assets/img/photos/ymlbuque.jpeg" srcset="./assets/img/photos/ymlbuque.jpeg 2x" alt=""></figure>
                             </div>
                             <!--/column -->
                             <div class="col-md-4 align-self-start">
-                                <figure class="rounded"><img src="./assets/img/photos/g4.jpg" srcset="./assets/img/photos/g4@2x.jpg 2x" alt=""></figure>
+                                <figure class="rounded"><img src="./assets/img/photos/port1.jpg" srcset="./assets/img/photos/port1.jpg 2x" alt=""></figure>
                             </div>
                             <!--/column -->
                         </div>
@@ -168,8 +169,8 @@
                     </div>
                     <!--/column -->
                     <div class="col-lg-6">
-                        <h2 class="display-4 mb-3">Que hacemos?</h2>
-                        <p class="lead fs-lg mb-8 pe-xxl-2">The full service we are offering is <span class="underline">specifically</span> designed to meet your business needs and projects.</p>
+                        <h2 class="display-4 mb-3">¿QUE HACEMOS?</h2>
+                        <br>
                         <div class="row gx-xl-10 gy-6">
                             <div class="col-md-6 col-lg-12 col-xl-6">
                                 <div class="d-flex flex-row">
@@ -215,7 +216,7 @@
                     <!--/column -->
                 </div>
                 <!--/.row -->
-                <h2 class="display-4 mb-3">Como lo hacemos?</h2>
+                <h2 class="display-4 mb-3">¿CÓMO LO HACEMOS?</h2>
                 <p class="lead fs-lg mb-8">We make your spending <span class="underline">stress-free</span> for you to have the perfect control.</p>
                 <div class="row gx-lg-8 gx-xl-12 gy-6 process-wrapper line">
                     <div class="col-md-6 col-lg-3"> <span class="icon btn btn-circle btn-lg btn-soft-primary disabled mb-4"><span class="number">01</span></span>
@@ -244,19 +245,13 @@
             <!-- /.container -->
         </section>
         <!-- /section -->
-        <section class="wrapper image-wrapper bg-image bg-overlay" data-image-src="./assets/img/photos/bg1.jpg">
-            <div class="container py-18 text-center">
-                <div class="row">
-                    <div class="col-lg-10 col-xl-10 col-xxl-8 mx-auto">
-                        <a href="https://www.youtube.com/watch?v=26TbMXXOe0I" class="btn btn-circle btn-white btn-play ripple mx-auto mb-5" data-glightbox><i class="icn-caret-right"></i></a>
-                        <h2 class="display-4 px-lg-10 px-xl-13 px-xxl-10 mb-10 text-white">Find out everything you need to know about us.</h2>
-                    </div>
-                    <!--/column -->
-                </div>
-                <!--/.row -->
-            </div>
-            <!-- /.container -->
-        </section>
+
+
+
+
+
+        <!-- /section -->
+        <br>
         <!-- /section -->
         <section class="wrapper bg-light angled upper-end">
             <div class="container py-14 py-md-16">
@@ -267,20 +262,20 @@
                         <div class="shape bg-dot primary rellax w-18 h-18" data-rellax-speed="1" style="top: 0; left: -1.4rem; z-index: 0;"></div>
                         <div class="row gx-md-5 gy-5">
                             <div class="col-md-6">
-                                <figure class="rounded mt-md-10 position-relative"><img src="./assets/img/photos/g5.jpg" srcset="./assets/img/photos/g5@2x.jpg 2x" alt=""></figure>
+                                <figure class="rounded mt-md-10 position-relative"><img src="./assets/img/photos/ymloffice1.jpeg" srcset="./assets/img/photos/ymloffice1.jpeg 2x" alt=""></figure>
                             </div>
                             <!--/column -->
                             <div class="col-md-6">
                                 <div class="row gx-md-5 gy-5">
                                     <div class="col-md-12 order-md-2">
-                                        <figure class="rounded"><img src="./assets/img/photos/g6.jpg" srcset="./assets/img/photos/g6@2x.jpg 2x" alt=""></figure>
+                                        <figure class="rounded"><img src="./assets/img/photos/ymloffice2.jpeg" srcset="./assets/img/photos/ymloffice2.jpeg 2x" alt=""></figure>
                                     </div>
                                     <!--/column -->
                                     <div class="col-md-10">
                                         <div class="card bg-pale-primary text-center">
                                             <div class="card-body py-11 counter-wrapper">
                                                 <h3 class="counter text-nowrap">50+</h3>
-                                                <p class="mb-0">Satisfied Customers</p>
+                                                <p class="mb-0">Clientes satisfechos</p>
                                             </div>
                                             <!--/.card-body -->
                                         </div>
@@ -297,9 +292,9 @@
                     <!--/column -->
                     <div class="col-lg-5">
                         <h2 class="display-4 mb-3">Contáctanos</h2>
-                        <p class="lead fs-lg">Let's make something great together. We are <span class="underline">trusted by</span> over 50+ clients. Join them by using our services and grow your business.</p>
-                        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Maecenas faucibus mollis interdum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                        <a href="./contact.html" class="btn btn-primary rounded-pill mt-2">Join Us</a>
+                        <p class="lead fs-lg">Trabajemos juntos.</p>
+                        <p>En SwanSea estamos para servirte. Tenemos un equipo todo el año disponible para responder tus consultas</p>
+                        <a href="mailto:info@swansea.com.py" class="btn btn-primary rounded-pill mt-2">Escríbenos</a>
                     </div>
                     <!--/column -->
                 </div>
@@ -328,7 +323,7 @@
                 <!-- /column -->
                 <div class="col-md-4 col-lg-3">
                     <div class="widget">
-                        <h4 class="widget-title text-white mb-3">Get in Touch</h4>
+                        <h4 class="widget-title text-white mb-3">Sigamos en contacto</h4>
                         <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asuncion, Paraguay</address>
                         <a href="mailto:info@swansea.com.py">info@swansea.com.py</a><br /> +595 21 328 9690
                     </div>
@@ -337,11 +332,11 @@
                 <!-- /column -->
                 <div class="col-md-4 col-lg-3">
                     <div class="widget">
-                        <h4 class="widget-title text-white mb-3">Learn More</h4>
+                        <h4 class="widget-title text-white mb-3">Saber más</h4>
                         <ul class="list-unstyled  mb-0">
-                            <li><a href="./about.html">About Us</a></li>
-                            <li><a href="./services.html">Services</a></li>
-                            <li><a href="./projects4.html">Projects</a></li>
+                            <li><a href="./about.html">Sobre nosotros</a></li>
+                            <li><a href="./services.html">Servicios</a></li>
+                            <li><a href="./links.html">Info de interés</a></li>
                         </ul>
                     </div>
                     <!-- /.widget -->
