--- a/test/swansea/index.html
+++ b/test/swansea/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="An impressive and flawless site template that includes various UI elements and countless features, attractive ready-made blocks and rich pages, basically everything you need to create a unique and professional website.">
     <meta name="keywords" content="bootstrap 5, business, corporate, creative, gulp, marketing, minimal, modern, multipurpose, one page, responsive, saas, sass, seo, startup, html5 template, site template">
     <meta name="author" content="elemis">
-    <title>Swansea Shipping Agency</title>
+    <title>Swansea Agencia Marítima</title>
     <link rel="shortcut icon" href="./assets/img/favicon.png">
     <link rel="stylesheet" href="./assets/css/plugins.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -503,7 +503,7 @@
                             <!--/column -->
                         </div>
                         <!--/.row -->
-                        <div class="wrapper image-wrapper bg-auto no-overlay bg-image text-center bg-map" data-image-src="./assets/img/map.png">
+                        <div class="wrapper image-wrapper bg-auto no-overlay bg-image text-center bg-map" data-image-src="./assets/img/map8.png">
                             <div class="container py-md-16 py-lg-18">
                                 <div class="row">
                                     <div class="col-xl-11 col-xxl-9 mx-auto">
