--- a/test/swansea/links.html
+++ b/test/swansea/links.html
@@ -102,7 +102,7 @@
             <div class="container py-14 py-md-16">
                 <div class="row text-center">
                     <div class="col-xl-10 mx-auto">
-                        <h3 class="display-4 mb-10 px-xxl-15">Accede a estos links para tener información especifica.</h3>
+                        <h3 class="display-4 mb-10 px-xxl-15">Accede a estos links para tener información específica.</h3>
                     </div>
                     <!-- /column -->
                 </div>
@@ -267,7 +267,7 @@
                 <!--/.row -->
                 <div class="row mt-11">
                     <div class="col-lg-6 col-xl-5 mx-auto text-center">
-                        <h2 class="display-6 mb-3">No encuentras la información que necesitas?</h2>
+                        <h2 class="display-6 mb-3">¿No encuentras la información que necesitas?</h2>
                         <a href="./contact.html" class="btn btn-primary rounded-pill">Contáctanos</a>
                     </div>
                     <!-- /column -->
@@ -300,7 +300,7 @@
                     <!-- /column -->
                     <div class="col-md-4 col-lg-3">
                         <div class="widget">
-                            <h4 class="widget-title text-white mb-3">Get in Touch</h4>
+                            <h4 class="widget-title text-white mb-3">Sigamos en contacto</h4>
                             <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asuncion, Paraguay</address>
                             <a href="mailto:info@swansea.com.py">info@swansea.com.py</a><br /> +595 21 328 9690
                         </div>
@@ -309,11 +309,11 @@
                     <!-- /column -->
                     <div class="col-md-4 col-lg-3">
                         <div class="widget">
-                            <h4 class="widget-title text-white mb-3">Learn More</h4>
+                            <h4 class="widget-title text-white mb-3">Saber más</h4>
                             <ul class="list-unstyled  mb-0">
-                                <li><a href="./about.html">About Us</a></li>
-                                <li><a href="./services.html">Services</a></li>
-                                <li><a href="./projects4.html">Projects</a></li>
+                                <li><a href="./about.html">Sobre nosotros</a></li>
+                                <li><a href="./services.html">Servicios</a></li>
+                                <li><a href="./links.html">Info de interés</a></li>
                             </ul>
                         </div>
                         <!-- /.widget -->
